--- a/Server/lib/Web/public/index.html
+++ b/Server/lib/Web/public/index.html
@@ -14,12 +14,12 @@
 			<meta name="keywords" content="끄투, kkutu, 플러스끄투, 끝말잇기, 앞말잇기, 십자말풀이, 웹, 쿵쿵따, 영어끝말잇기, 영어쿵쿵따, 끝말잇기사이트, 자음퀴즈, 초성퀴즈, 그림퀴즈, 십자말풀이, 가로세로, 타자, 타자연습, 앞말잇기" class="s-y_bCXRrkrYfP"><meta name="description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta name="publisher" content="Plus" class="s-y_bCXRrkrYfP"><meta property="og:title" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta property="og:description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta property="og:url" content="https://kkutu.cc" class="s-y_bCXRrkrYfP"><meta property="og:site_name" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta property="og:type" content="website" class="s-y_bCXRrkrYfP"><meta property="og:image" content="https://kkutu.cc/img/kkutu/og.png" class="s-y_bCXRrkrYfP"><meta property="og:image:width" content="1200" class="s-y_bCXRrkrYfP"><meta property="og:image:height" content="630" class="s-y_bCXRrkrYfP"><meta property="og:locale" content="ko-KR" class="s-y_bCXRrkrYfP"><meta name="twitter:card" content="summary_large_image" class="s-y_bCXRrkrYfP"><meta name="twitter:site" content="kkutu.cc" class="s-y_bCXRrkrYfP"><meta name="twitter:title" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta name="twitter:description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta name="twitter:image" content="https://kkutu.cc/img/kkutu/og.png" class="s-y_bCXRrkrYfP">
 		
 		<link href="./_app/immutable/assets/0.ezGMsy6E.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Rk0bIk4y.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.A8CnmgVl.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.a6mE2SwB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.qLj5Ykwe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.YAOc3RFa.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.jc1UesUW.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app._Q0uzThI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.snFrDORE.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.D3w519Iq.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ORLo9Vna.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.45INi5hu.js"><title>플러스끄투 - 혼자도 같이도 즐거운 온라인 단어 게임</title><!-- HEAD_svelte-j0c1yx_START --><!-- HEAD_svelte-j0c1yx_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_1vdpzzm = {
+					__sveltekit_11vda9m = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -43,8 +43,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Rk0bIk4y.js"),
-						import("./_app/immutable/entry/app.jc1UesUW.js")
+						import("./_app/immutable/entry/start.a6mE2SwB.js"),
+						import("./_app/immutable/entry/app._Q0uzThI.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
