--- a/neofront/src/app.html
+++ b/neofront/src/app.html
@@ -11,7 +11,24 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3808496003691786"
      		crossorigin="anonymous"></script>
-			<meta name="keywords" content="끄투, kkutu, 플러스끄투, 끝말잇기, 앞말잇기, 십자말풀이, 웹, 쿵쿵따, 영어끝말잇기, 영어쿵쿵따, 끝말잇기사이트, 자음퀴즈, 초성퀴즈, 그림퀴즈, 십자말풀이, 가로세로, 타자, 타자연습, 앞말잇기" class="s-y_bCXRrkrYfP"><meta name="description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta name="publisher" content="Plus" class="s-y_bCXRrkrYfP"><meta property="og:title" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta property="og:description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta property="og:url" content="https://kkutu.cc" class="s-y_bCXRrkrYfP"><meta property="og:site_name" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta property="og:type" content="website" class="s-y_bCXRrkrYfP"><meta property="og:image" content="https://kkutu.cc/img/kkutu/og.png" class="s-y_bCXRrkrYfP"><meta property="og:image:width" content="1200" class="s-y_bCXRrkrYfP"><meta property="og:image:height" content="630" class="s-y_bCXRrkrYfP"><meta property="og:locale" content="ko-KR" class="s-y_bCXRrkrYfP"><meta name="twitter:card" content="summary_large_image" class="s-y_bCXRrkrYfP"><meta name="twitter:site" content="kkutu.cc" class="s-y_bCXRrkrYfP"><meta name="twitter:title" content="플러스끄투" class="s-y_bCXRrkrYfP"><meta name="twitter:description" content="플러스끄투에서 끝말잇기, 쿵쿵따와 같은 온라인 단어 게임을 즐겨보세요." class="s-y_bCXRrkrYfP"><meta name="twitter:image" content="https://kkutu.cc/img/kkutu/og.png" class="s-y_bCXRrkrYfP">
+			
+			 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+			 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+			 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+			 <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+			 <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+			 <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+			 <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+			 <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+			 <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+			 <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+			 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+			 <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+			 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+			 <link rel="manifest" href="/manifest.json">
+			 <meta name="msapplication-TileColor" content="#ffffff">
+			 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+			 <meta name="theme-color" content="#ffffff">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
