--- a/Server/lib/Web/public/global_notice.html
+++ b/Server/lib/Web/public/global_notice.html
@@ -1,2 +1,1 @@
-﻿<!--그 누구보다 업데이트 소식을 가장 먼저 받고, GM과 소통할 수 있는 디스코드 서버에 참여해보세요! <a href="https://discord.gg/bt25WdwzR7" style="background-color:blue;color:#fff;" target="_blank">[참여하기]</a>-->
-5월 1일부터 플러스끄투 개발이 한시적으로 중단됩니다. 서비스를 원점에서 재검토 후 보다 나은 모습으로 찾아오겠습니다.
+﻿그 누구보다 업데이트 소식을 가장 먼저 받고, GM과 소통할 수 있는 디스코드 서버에 참여해보세요! <a href="https://discord.gg/bt25WdwzR7" style="background-color:blue;color:#fff;" target="_blank">[참여하기]</a>
