--- a/Server/lib/Web/public/index.html
+++ b/Server/lib/Web/public/index.html
@@ -41,13 +41,13 @@
 			</script>
 		
 		<link href="./_app/immutable/assets/0.8YjN_-Qg.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.RnhyOtdC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.FiB8lh1K.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.NE9027s4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ALRHFnO-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.s29Zrdcm.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.idH8lHCP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.xoHStLN0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Rji9hMP4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.zFipMuJ4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.NOYIh8iC.js"><title>플러스끄투 - 혼자도 같이도 즐거운 온라인 단어 게임</title><!-- HEAD_svelte-j0c1yx_START --><!-- HEAD_svelte-j0c1yx_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.zMYoUtM7.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2._oPr8Tc8.js"><title>플러스끄투 - 혼자도 같이도 즐거운 온라인 단어 게임</title><!-- HEAD_svelte-j0c1yx_START --><!-- HEAD_svelte-j0c1yx_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <div class="app"><header class="top-0 fixed w-full z-10" data-svelte-h="svelte-rcoynf"><div class="bg-gray-900/70 backdrop-blur-xl lg:py-0 py-4"><nav class="max-w-screen-xl mx-auto flex items-center justify-between px-4 lg:px-8 lg:py-0" aria-label="Global"><div class="flex lg:flex-1"><a href="/"><button class="-m-1.5 p-1.5 md:flex"><span class="sr-only">플러스끄투</span><img class="h-6" src="/img/logo_dark.png" alt=""></button></a></div> <div class="lg:py-4 flex text-white"><a href="/howto" class="hidden lg:block mr-6 text-xl flex rounded-xl py-2 px-2 transform ease-in duration-100 active:scale-95 hover:backdrop-blur-lg hover:bg-white/20">게임 소개</a> <a href="/login" class="lg:mr-6 text-xl flex rounded-xl py-2 px-2 transform ease-in duration-100 active:scale-95 hover:backdrop-blur-lg hover:bg-white/20">로그인</a></div> </nav></div></header> <main> <div class="dark:bg-gray-900 dark:text-white"><section class="relative isolate bg-gray-800 w-full flex flex-col"><div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true" data-svelte-h="svelte-mdabbr"><div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-purple-500 to-purple-700 opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div></div> <div class="py-32 sm:py-48 lg:py-56"><div class="mx-auto max-w-screen-2xl container px-4 md:px-6"><div class="justify-center flex flex-col items-center"><p class="text-white mb-8 text-center sm:text-4xl text-black" data-svelte-h="svelte-a1e6i4"><strong>NEW!</strong> 클래식 UI 추가!</p> <h1 class="text-gray-300 text-center text-3xl lg:text-8xl font-bold text-black sm:text-4xl md:text-5xl lg:text-6xl" data-svelte-h="svelte-16qke9g">모든 것이 플러스,<br> <span class="text-white">플러스끄투</span></h1> <p class="text-white mt-8 text-center sm:text-4xl text-black" data-svelte-h="svelte-1lionfc">즐겨하던 끄투가 그 어디든 만족스럽게!<br>
@@ -61,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_gegtzy = {
+					__sveltekit_b41po4 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -70,8 +70,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.RnhyOtdC.js"),
-						import("./_app/immutable/entry/app.idH8lHCP.js")
+						import("./_app/immutable/entry/start.NE9027s4.js"),
+						import("./_app/immutable/entry/app.xoHStLN0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
