--- a/Server/lib/Web/public/index.html
+++ b/Server/lib/Web/public/index.html
@@ -41,12 +41,12 @@
 			</script>
 		
 		<link href="./_app/immutable/assets/0.8YjN_-Qg.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.o4HG_MC-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.hGDIi3mL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.x_dWgB3e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.X1LflRZw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.s29Zrdcm.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.nrLrUUyU.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.wuYj2RV4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Rji9hMP4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.dakKBIM_.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.jrTBy0KJ.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2._oPr8Tc8.js"><title>플러스끄투 - 혼자도 같이도 즐거운 온라인 단어 게임</title><!-- HEAD_svelte-j0c1yx_START --><!-- HEAD_svelte-j0c1yx_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -61,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_14hojx1 = {
+					__sveltekit_1cpku3g = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -70,8 +70,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.o4HG_MC-.js"),
-						import("./_app/immutable/entry/app.nrLrUUyU.js")
+						import("./_app/immutable/entry/start.x_dWgB3e.js"),
+						import("./_app/immutable/entry/app.wuYj2RV4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
