--- a/Server/lib/Web/public/index.html
+++ b/Server/lib/Web/public/index.html
@@ -41,12 +41,12 @@
 			</script>
 		
 		<link href="./_app/immutable/assets/0.VMVJcsnJ.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.MNi9CCzN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.hoHjTUBI.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.jR7Xa3R8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.tLe8OvPz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.s29Zrdcm.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ukFFQxi2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.1VlCLMFQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Rji9hMP4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.tP0pqyOG.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Co1Z6lcS.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.EvJ90_FG.js"><title>플러스끄투 - 혼자도 같이도 즐거운 온라인 단어 게임</title><!-- HEAD_svelte-j0c1yx_START --><!-- HEAD_svelte-j0c1yx_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -61,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_xgbfi1 = {
+					__sveltekit_1nut2qh = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -70,8 +70,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.MNi9CCzN.js"),
-						import("./_app/immutable/entry/app.ukFFQxi2.js")
+						import("./_app/immutable/entry/start.jR7Xa3R8.js"),
+						import("./_app/immutable/entry/app.1VlCLMFQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
