--- a/Server/lib/Web/public/index.html
+++ b/Server/lib/Web/public/index.html
@@ -41,12 +41,12 @@
 			</script>
 		
 		<link href="./_app/immutable/assets/0.3c45ffeg.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.z0Qjxjuj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.EtOwJd-q.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.fHIsyL0n.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.WbLeLid2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.s29Zrdcm.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.jhj84blw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.f5HzGwVb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Rji9hMP4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.P1MZNG8s.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.NrBPZnuc.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.4T-PfQSy.js"><title>플러스끄투 - 혼자도 같이도 즐거운 온라인 단어 게임</title><!-- HEAD_svelte-j0c1yx_START --><!-- HEAD_svelte-j0c1yx_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -61,7 +61,7 @@
 			
 			<script>
 				{
-					__sveltekit_r7xj82 = {
+					__sveltekit_8wxf02 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -70,8 +70,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.z0Qjxjuj.js"),
-						import("./_app/immutable/entry/app.jhj84blw.js")
+						import("./_app/immutable/entry/start.fHIsyL0n.js"),
+						import("./_app/immutable/entry/app.f5HzGwVb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
